# vop

./: .env  .env.development  .env.production  .gitignore  CHANGELOG.md  README.md  changelog-option.cjs  index.html  jsconfig.json  package.json  pnpm-lock.yaml  vite.config.js
.github/workflows/: release.yml
.trae/rules/: project_rules.md
src/: App.jsx  App.scss  Base.scss  main.jsx  styles.css  theme.js
src-tauri/: Cargo.toml  tauri.conf.json  tauri.windows.conf.json
src-tauri/capabilities/: desktop.json  main.json
src-tauri/icons/: icon.icns
src-tauri/initdata/: config.json  shortcut.json  vop.json
src-tauri/migrations/2025-06-09-234955_create/: down.sql  up.sql
src-tauri/src/: cache.rs  conf.rs  lib.rs  main.rs  schema.rs  utils.rs
src-tauri/src/app/: cmds.rs  hotkey.rs  mod.rs
src-tauri/src/download/: file_download.rs  m3u8_download.rs  m3u8_encrypt_key.rs  mod.rs  types.rs  util.rs
src-tauri/src/orm/: mod.rs
src-tauri/src/orm/download_info/: cmds.rs  service.rs  types.rs
src-tauri/src/orm/history/: cmds.rs  mod.rs  service.rs  types.rs
src-tauri/src/orm/site/: cmds.rs  mod.rs  service.rs  types.rs
src-tauri/src/orm/star/: cmds.rs  mod.rs  service.rs  types.rs
src-vop-api/: Cargo.toml
src-vop-api/src/: api.rs  cache.rs  main.rs
src/api/: base.ts  douban.js  downloadInfo.ts  fetch.js  history.js  history.ts  movies.js  site.ts  siteService.js  star.ts
src/business/: DownloadFileTask.js  DownloadMiniserveTask.js  cache.js  download.js  htmlParseStrategy.js  play.js  types.ts
src/components/: AppLock.jsx  AppLock.scss  AppLockSettings.jsx  AppLockSettings.scss  BottomNav.jsx  BottomNav.scss  ButtonIcon.jsx  ButtonIcon.scss  ContextMenu.jsx  ContextMenu.scss  ContextMenuExample.jsx  ContextMenuExample.scss  KeepAlive.jsx  LazyImage.jsx  MovidCard.jsx  MovieCard.jsx  MovieCard.scss  Navbar.jsx  Navbar.scss  QRCodeModal.jsx  SearchAutoComplete.jsx  SettingButton.jsx  SettingsColorPicker.jsx  SettingsComponent.module.scss  SettingsInput.jsx  SettingsInputArray.jsx  SettingsInputArray.scss  SettingsSelect.jsx  SettingsSwitch.jsx  SvgIcon.jsx  UpdateModal.jsx  UpdateModal.module.scss  WinTool.jsx  WinTool.scss
src/components/Waterfall/: index.jsx  index.scss  useCalculareCols.js
src/components/message/: Message.jsx  index.jsx
src/db/: index.js
src/hooks/: index.jsx  useConfig.jsx  useContentBodySize.js  useGetState.jsx  useIntersectionObserver.js  useWindowSize.js
src/pages/: Detail.jsx  Detail.scss  Download.jsx  Download.scss  History.jsx  Movie.jsx  Movie.scss  Play.jsx  Play.scss  Search.jsx  Settings.jsx  Settings.scss  Site.jsx  Site.scss  Star.jsx
src/pages/components/: SiteModal.jsx
src/static/: downloadInfo.js  settingsData.js  sites.js  systemConf.js
src/store/: coreSlice.js  movieSlice.js  store.js  useGlobalStore.ts  useMovieStore.ts
src/utils/: common.js  dom.js  env.js  httpStrategy.js  index.js  store.ts
src/windows/main/: index.jsx  index.scss
src/windows/small_play/: index.jsx  index.scss
tauri-plugin-vop/: Cargo.toml  README.md  build.rs  package.json  pnpm-lock.yaml
tauri-plugin-vop/android/: build.gradle.kts  local.properties
tauri-plugin-vop/android/src/androidTest/java/: ExampleInstrumentedTest.kt
tauri-plugin-vop/android/src/main/java/: Example.kt  VopPlugin.kt
tauri-plugin-vop/android/src/test/java/: ExampleUnitTest.kt
tauri-plugin-vop/guest-js/: index.ts
tauri-plugin-vop/ios/: Package.swift  README.md
tauri-plugin-vop/ios/Sources/: ExamplePlugin.swift
tauri-plugin-vop/permissions/: default.toml
tauri-plugin-vop/permissions/autogenerated/: reference.md
tauri-plugin-vop/permissions/autogenerated/commands/: toggle_screen_orientation.toml
tauri-plugin-vop/permissions/schemas/: schema.json
tauri-plugin-vop/src/: commands.rs  desktop.rs  lib.rs  mobile.rs  models.rs
