[package]
name = "vop"
version = "0.0.1"
description = "A Online Play Viedo App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.0.0", features = [ "config-json5" ] }

[dependencies]
tauri = { version = "2.0.0", features = [ "config-json5", "protocol-asset" ] }
tauri-plugin-shell = "2.0.0"
serde = { version = "1.0.210", features = ["derive"] }
serde_json = "1.0.128"
tauri-plugin-os = "2.0.0"
tauri-plugin-http = "2.0.0"
tauri-plugin-fs = { version = "2.0.0", features = ["watch"] }
tauri-plugin-dialog = "2.0.0"
tauri-plugin-store = "2.0.0"
tauri-plugin-process = "2.0.0"
tauri-plugin-log = "2.0.0"
log = "0.4.17"
anyhow = "1.0.87"
moka = { version = "0.12", default-features = false, features = ["sync"] }
lazy_static = "1.4.0"
tokio = {version ="1.40.0",features = ["full"] }
m3u8-rs = "6.0.0"
hex = "0.4.3"
aes = "0.8.3"
cbc = "0.1.2"
url = { version = "2", features = ["serde"] }
tungstenite = "0.24.0"
nom = "7"
crossbeam = "0.8"
once_cell = "1.20.1"
regex = "1.11.0"
encoding_rs = "0.8.34"
tauri-plugin-vop = { path = "../tauri-plugin-vop" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
