[package]
name = "vop"
version = "0.0.7"
description = "A Online Play Video App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.2.0", features = [ "config-json5" ] }

[dependencies]
tauri = { version = "2.5.0", features = [ "config-json5", "protocol-asset", "devtools" ] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-os = "2.2.1"
tauri-plugin-http = { version = "2.4.3", features = ["stream", "json"] }
tauri-plugin-fs = { version = "2.2.1", features = ["watch"] }
tauri-plugin-dialog = "2.2.1"
tauri-plugin-store = "2.2.0"
tauri-plugin-process = "2.2.1"
tauri-plugin-log = "2.3.1"
log = "0.4.27"
anyhow = "1.0.98"
moka = { version = "0.12.10", default-features = false, features = ["sync"] }
lazy_static = "1.4.0"
tokio = {version ="1.44.2",features = ["full"] }
m3u8-rs = "6.0.0"
hex = "0.4.3"
aes = "0.8.3"
cbc = "0.1.2"
url = { version = "2.5.4", features = ["serde"] }
tungstenite = "0.26.2"
nom = "8.0.0"
crossbeam = "0.8"
once_cell = "1.21.3"
regex = "1.11.1"
encoding_rs = "0.8.35"
futures = "0.3.28"
rand = {version ="0.9.1",features = [] }
tauri-plugin-vop = { path = "../tauri-plugin-vop" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-updater = "2"
