[package]
name = "vop"
version = "0.2.3"
description = "A Online Play Video App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "vop_lib"
crate-type = ["lib", "cdylib", "staticlib"]

[build-dependencies]
tauri-build = { version = "2.3.0", features = [ "config-json5" ] }

[dependencies]
tauri = { version = "2.6.2", features = [ "config-json5", "protocol-asset", "devtools" ] }
tauri-plugin-shell = "2.2.1"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
tauri-plugin-os = "2.3.0"
tauri-plugin-http = { version = "2.5.0", features = ["stream", "json"] }
tauri-plugin-fs = { version = "2.4.0", features = ["watch"] }
tauri-plugin-dialog = "2.3.0"
tauri-plugin-store = "2.3.0"
tauri-plugin-process = "2.3.0"
tauri-plugin-log = "2.6.0"
log = "0.4.27"
anyhow = "1.0.98"
moka = { version = "0.12.10", default-features = false, features = ["sync"] }
lazy_static = "1.4.0"
tokio = {version ="1.45.1",features = ["full"] }
m3u8-rs = "6.0.0"
hex = "0.4.3"
aes = "0.8.3"
cbc = "0.1.2"
url = { version = "2.5.4", features = ["serde"] }
tungstenite = "0.27.0"
nom = "8.0.0"
crossbeam = "0.8"
once_cell = "1.21.3"
regex = "1.11.1"
encoding_rs = "0.8.35"
futures = "0.3.31"
rand = {version ="0.9.1",features = [] }
zip = "4.2.0"
diesel = { version = "2.2.0", features = ["sqlite", "returning_clauses_for_sqlite_3_35", "r2d2"] }
diesel_migrations = "2"
libsqlite3-sys = { version = "0.28", features = ["bundled"] }
chrono = "0.4.41"
uuid = { version = "1.17.0", features = ["v4"] }
tauri-plugin-vop = { path = "../tauri-plugin-vop" }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-global-shortcut = "2"
tauri-plugin-updater = "2.9.0"

[target.'cfg(windows)'.dependencies]
winapi = { version = "0.3", features = ["winsock2", "ws2def", "minwindef"] }
