[package]
name = "vop_api"
version = "0.0.0"
description = "vop api server"
authors = ["fangcy"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
serde = { version = "1", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0.66"
reqwest = { version = "0.11.18", features = ["json"] }
moka = { version = "0.12", default-features = false, features = ["sync"] }
lazy_static = "1.4.0"
url = { version = "2", features = ["serde"] }
colored = "2.0.4"
log = "0.4"