[package]
name = "tauri-plugin-vop"
version = "0.1.1"
authors = [ "You" ]
description = ""
edition = "2021"
rust-version = "1.78"
exclude = ["/examples", "/webview-dist", "/webview-src", "/node_modules"]
links = "tauri-plugin-vop"

[dependencies]
tauri = { version = "2.5.0" }
serde = "1.0.219"
thiserror = "2.0.12"

[build-dependencies]
tauri-plugin = { version = "2.2.0", features = ["build"] }
